[package]
name = "merkle-tree-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.65.0"
authors = ["Ahiara Ikechukwu Marvellous <https://github.com/literallymarvellous>"]
readme = "README.md"
repository = "https://github.com/literallymarvellous/merkle-tree-rs"
description = "A Rust library to generate merkle trees and merkle proofs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0.24"
render-tree = "0.1.1"
ethers = "2.0"
