[package]
name = "fendermint_rpc"
description = "Utilities working with the tendermint_rpc library to provide an API facade for Fendermint"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint-proto = { workspace = true }
tracing = { workspace = true }

cid = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }

fendermint_crypto = { path = "../crypto" }
fendermint_vm_actor_interface = { path = "../vm/actor_interface" }
fendermint_vm_message = { path = "../vm/message" }

[dev-dependencies]
clap = { workspace = true }
ethers = { workspace = true, features = ["abigen"] }
hex = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

fendermint_vm_genesis = { path = "../vm/genesis" }
