[package]
name = "fendermint_storage"
description = "KV store abstraction for non-blockstore use."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { version = "15.1.0", optional = true }
quickcheck = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
quickcheck_macros = { workspace = true }
serde = { workspace = true }
fvm_ipld_encoding = { workspace = true }

[features]
default = ["inmem"]
inmem = ["im", "testing"]
testing = ["quickcheck"]
