[package]
name = "ipc-api"
description = "IPC common types and utils"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
fil_actors_runtime = { workspace = true, optional = true }
fnv = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
integer-encoding = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
cid = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
serde_tuple = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
ethers = { workspace = true }
tracing = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }

ipc_actors_abis = { workspace = true }
ipc-types = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
fil_actors_runtime = { workspace = true }

[features]
default = []
fil-actor = ["fil_actors_runtime"]
