[package]
name = "ipc-provider"
description = "The provider to interact with IPC"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }

libsecp256k1 = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cid = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
base64 = { workspace = true }
strum = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
dirs = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
serde_tuple = { workspace = true }
serde_with = { workspace = true }
zeroize = { workspace = true }

ethers-contract = { workspace = true }
ethers = { workspace = true }
fvm_shared = { workspace = true }
fil_actors_runtime = { workspace = true }
fvm_ipld_encoding = { workspace = true }

ipc-types = { workspace = true }
ipc-wallet = { workspace = true, features = ["with-ethers"] }
ipc-api = { workspace = true }
ipc_actors_abis = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
hex = { workspace = true }
indoc = "2.0.0"
