[package]
name = "fendermint_actor_chainmetadata"
description = "Actor for storing chain metadata"
license.workspace = true
edition.workspace = true
authors.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cid = { workspace = true, default-features = false }
fil_actors_runtime = { workspace = true, optional = true, features = [
    "fil-actor",
] }
fvm_shared = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_amt = { workspace = true }
num-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_tuple = { workspace = true }
num-traits = { workspace = true }
frc42_dispatch = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
fil-actor = ["fil_actors_runtime"]
