[package]
name = "fendermint_actor_eam"
description = "Builtin Ethereum address manager actor for IPC"
license.workspace = true
edition.workspace = true
authors.workspace = true
version = "0.1.0"

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
fil_actor_eam = { workspace = true }
fil_actors_runtime = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
log = { workspace = true }
multihash = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
hex-literal = { workspace = true }
frc42_dispatch = { workspace = true }

[dev-dependencies]
fil_actors_evm_shared = { workspace = true }
fil_actors_runtime = { workspace = true, features = ["test_utils"] }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
