[package]
name = "fendermint_app_settings"
description = "Fendermint configuration settings. The defaults are in fendermint/app/config/default.toml"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
multiaddr = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serial_test = { workspace = true }
tendermint-rpc = { workspace = true }

fvm_shared = { workspace = true }
fvm_ipld_encoding = { workspace = true }
ipc-api = { workspace = true }
ipc-provider = { workspace = true }
tracing = { workspace = true }

fendermint_vm_encoding = { path = "../../vm/encoding" }
fendermint_vm_topdown = { path = "../../vm/topdown" }
