[package]
name = "fendermint_eth_hardhat"
description = "Utilities to deal with Hardhat build artifacts"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ethers-core = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
