[package]
name = "fendermint_cetf_test"
description = "End-to-end integration testing cetf"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint-proto = { workspace = true }
tracing = { workspace = true }

cid = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }

fendermint_crypto = { path = "../../crypto" }
fendermint_vm_actor_interface = { path = "../../vm/actor_interface" }
fendermint_vm_message = { path = "../../vm/message" }

[dev-dependencies]
clap = { workspace = true }
ethers = { workspace = true, features = ["abigen"] }
hex = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fendermint_rpc = { path = "../../rpc" }
fendermint_vm_genesis = { path = "../../vm/genesis" }
fendermint_actor_cetf = { path = "../../actors/cetf" }
bls-signatures = { version = "0.15.0", default-features = false, features = ["blst"] }