[package]
name = "delorean-cli"
description = "End-to-end integration testing delorean"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint-proto = { workspace = true }
tracing = { workspace = true }

cid = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }

fendermint_crypto = { path = "../../crypto" }
fendermint_vm_actor_interface = { path = "../../vm/actor_interface" }
fendermint_vm_message = { path = "../../vm/message" }
fvm_ipld_blockstore = { workspace = true }
tokio = { workspace = true }
fendermint_rpc = { path = "../../rpc" }
futures.workspace = true
tlock_age = { git = "https://github.com/BadBoiLabs/tlock-rs", rev = "3c375ccfbc0eab77b0481029f0d09021f876377a", features = ["armor"] }
k256 = { workspace = true, features = ["sha2"] }

clap = { workspace = true }
ethers = { workspace = true, features = ["abigen"] }
hex = { workspace = true }
lazy_static = { workspace = true }
tracing-subscriber = { workspace = true }
fendermint_vm_genesis = { path = "../../vm/genesis" }
fendermint_actor_cetf = { path = "../../actors/cetf" }
bls-signatures = { git = "https://github.com/BadBoiLabs/bls-signatures", rev = "1557d58cdae7f04ea6d7f8db78ec64c63bf8af5d" }
