[package]
name = "fendermint_smoke_test"
description = "Provides some end-to-end integration testing between Fendermint and a full Tendermint node."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
